# sinfonia

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  BRIDGE.example.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  NOTICE  README.md  SECURITY.md  WORKFLOW.example.md  docker-bake.hcl  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  lychee.toml
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  docs.yml  invariant-linters.yml  overlap-linter.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: 0001-harness-feedback-ingestion-7b1e0c9d.json  0001-implementation-plan-a3f0c1d7.json  CLIENT_SETUP-4d8b1f6a.json  DEPLOYMENT-3f7a1c2e.json  HARNESS-SPEC-47e7c0e6.json  JIRA-SCREEN-SCHEME-2c7e94d1.json  MIGRATION-v0-2-to-v0-3-a4f7c2e1.json  SKILLS-a7f3c2e1.json  SPEC-5e0f4c2a.json  harness-improvement-analysis-5e9a4c1f.json  sinfonia-harness-action-plan-a1f3c2e8.json
.planning/intel/ingest-sources/: harness-improvement-analysis.md  sinfonia-harness-action-plan.md
.planning/phases/04-merge-conflict-handling-merge-queue/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-SUMMARY.md  04-REVIEW.md  04-VERIFICATION.md
.planning/phases/05-repository-context-contract/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-VALIDATION.md
config/: cost_table.yaml
crates/sinfonia/: AGENTS.md  Cargo.toml
crates/sinfonia-bridge/: AGENTS.md  Cargo.toml
crates/sinfonia-bridge/src/: config.rs  events.rs  labels.rs  lib.rs  main.rs  selftest.rs  storage.rs
crates/sinfonia-bridge/src/feedback/: attempts.rs  budget.rs  categorize.rs  cost.rs  manifest.rs  mod.rs  transition.rs
crates/sinfonia-bridge/src/github/: auth.rs  client.rs  mod.rs
crates/sinfonia-bridge/src/merge/: mod.rs  tests.rs
crates/sinfonia-bridge/src/telemetry/: mod.rs  spans.rs  tenant.rs
crates/sinfonia-bridge/src/webhook/: handlers.rs  mod.rs  verify.rs
crates/sinfonia-bridge/tests/: bridge_e2e.rs  manifest_security.rs
crates/sinfonia-tracker/: AGENTS.md  Cargo.toml
crates/sinfonia-tracker/src/: config.rs  custom_fields.rs  error.rs  jira.rs  jira_adf.rs  lib.rs  linear.rs  types.rs
crates/sinfonia-tracker/tests/: jira_wiremock.rs
crates/sinfonia/src/: check.rs  domain.rs  errors.rs  init_repl.rs  lib.rs  main.rs  template.rs  tracker.rs
crates/sinfonia/src/agent/: anthropic.rs  cli.rs  codex_stub.rs  events.rs  google.rs  mod.rs  ollama.rs  openai.rs  opencode.rs  tools.rs  turn.rs
crates/sinfonia/src/config/: loader.rs  mod.rs  typed.rs
crates/sinfonia/src/http/: events.rs  mod.rs
crates/sinfonia/src/orchestrator/: dispatch.rs  mod.rs  retries.rs  runner.rs
crates/sinfonia/src/telemetry/: mod.rs  spans.rs  tenant.rs
crates/sinfonia/src/workspace/: hooks.rs  manager.rs  mod.rs
crates/sinfonia/tests/: skills_integration.rs  spec_conformance.rs
docker/: AGENTS.md  BRIDGE.example.md  WORKFLOW.example.md  WORKFLOW.md  entrypoint.sh
docs/: AGENTS.md  ARCHITECTURE.md  CLIENT_SETUP.md  CONTEXT-CONTRACT.md  DEPLOYMENT.md  HARNESS-SPEC.md  JIRA-SCREEN-SCHEME.md  MIGRATION-v0.2-to-v0.3.md  SKILLS.md  SPEC.md  workflow-executive-overview.md
docs/proposals/: 0001-harness-feedback-ingestion.md  0001-implementation-plan.md  0002-orchestrator-gating-ground-truth.md  0003-feedback-loop-reliability-seams.md  0004-agent-tool-surface-hardening.md  0005-merge-coordinator.md
docs/v0.3-plan/: 00-overview.md  01-bridge-mvp.md  02-opencode-VERIFY.md  02-opencode-backend.md  03-telemetry-VERIFY.md  03-telemetry-budget.md  04-jira-VERIFY.md  04-jira-bridge.md  05-skills-VERIFY.md  05-skills-cli.md  06-docker-VERIFY.md  06-docker.md  07-docs-VERIFY.md  07-docs.md  STATUS.md
examples/telemetry/: README.md  otel-collector-config.yaml  postgres-schema.sql
examples/telemetry/queries/: 01-tenant-monthly-cost.sql  02-first-try-rate.sql  03-budget-heavy-tickets.sql
scripts/: check-doc-code-blocks.sh  decompose-consistency-check.sh  lint-pr-overlap.sh  lint-stale-nodes.sh  scan-overlap.sh  verify-workspace-move.sh
skills/migrate-from-symphony/: SKILL.md
skills/migrate-from-symphony/templates/: workflow-from-symphony.liquid
skills/setup-agent-backend/: SKILL.md
skills/setup-agent-backend/templates/: agent-anthropic.liquid  agent-claude-code.liquid  agent-codex.liquid  agent-google.liquid  agent-ollama.liquid  agent-openai.liquid  agent-opencode.liquid
skills/setup-bridge/: SKILL.md
skills/setup-bridge/templates/: bridge.md.liquid  docker-compose-sibling.yml.liquid  gh-actions-ci-report.yml.liquid
skills/setup-bridge/validators/: self-test.sh
skills/setup-state-machine/: SKILL.md
skills/setup-state-machine/templates/: needs-fixes-e2e-prompt.liquid  needs-fixes-prompt.liquid  state-machine.liquid
skills/setup-telemetry/: SKILL.md
skills/setup-telemetry/templates/: otel-collector-config.yaml.liquid  telemetry-datadog.yml.liquid  telemetry-grafana.yml.liquid  telemetry-honeycomb.yml.liquid  telemetry-local.yml.liquid
skills/setup-workflow/: SKILL.md
skills/setup-workflow/templates/: hooks-go.liquid  hooks-node.liquid  hooks-python.liquid  hooks-rust.liquid  (+1 more)
src/: domain.rs  errors.rs  template.rs
src/agent/: cli.rs  events.rs  mod.rs  ollama.rs  openai.rs  tools.rs  turn.rs
src/config/: typed.rs  watcher.rs
src/http/: mod.rs
src/orchestrator/: dispatch.rs  mod.rs  retries.rs  runner.rs  state.rs
src/tracker/: jira.rs  linear.rs  mod.rs
src/workspace/: hooks.rs  manager.rs  mod.rs
templates/: AGENTS.md  CODEOWNERS
templates/.harness/: README.md
tests/: docker-compose-smoke.sh  docker-smoke.sh  spec_conformance.rs
tests/fixtures/: BRIDGE.smoke.md  WORKFLOW.smoke.md
tests/lint/: no-overlap-fixture.json  overlap-fixture.json  run-decompose-test.sh  run-overlap-test.sh  run-stale-test.sh  stories-fixture.json
(+11 files in other folders)
