[workspace]
resolver = "2"
members = [
    "crates/sinfonia",
    "crates/sinfonia-bridge",
    "crates/sinfonia-tracker",
]

[workspace.package]
version = "0.3.0-alpha.1"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
authors = ["The Sinfonia Contributors"]
homepage = "https://github.com/O-Side-Systems/sinfonia"
repository = "https://github.com/O-Side-Systems/sinfonia"
documentation = "https://docs.rs/sinfonia"

[workspace.dependencies]
# Cross-crate Sinfonia members.
sinfonia-tracker = { path = "crates/sinfonia-tracker", version = "0.3.0-alpha.1" }

# Async runtime + HTTP + serialization shared across crates.
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
liquid = "0.26"
notify = "6"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
dirs = "5"
shellexpand = "3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
url = "2"
once_cell = "1"

# Dev-only.
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
