[package]
name = "sinfonia-bridge"
description = "CI feedback bridge for Sinfonia — translates GitHub webhook events into tracker state transitions, custom-field updates, and PR comments."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true

[[bin]]
name = "sinfonia-bridge"
path = "src/main.rs"

[lib]
name = "sinfonia_bridge"
path = "src/lib.rs"

[dependencies]
sinfonia-tracker = { workspace = true }

# Async runtime + HTTP + serialization (all shared with sinfonia).
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
liquid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
shellexpand = { workspace = true }

# Bridge-only dependencies. Pinned at impl time; revisit at v0.3 release.
# - octocrab          GitHub API client (PAT + App auth in P1-G)
# - rusqlite          idempotency + PR↔ticket map (P1-E)
# - subtle            constant-time HMAC compare (P1-E)
# - hmac, sha2        signature verification (P1-E + Phase 3 typed event channel,
#                     workspace-scoped because Sinfonia now signs outbound POSTs
#                     with the same algorithm — see §7.2)
# - jsonwebtoken      EncodingKey for GitHub App JWT auth (P1-G); pinned
#                     to the major used transitively by octocrab 0.39 to
#                     avoid duplicate compilation.
octocrab = "0.39"
# - zip               in-memory extraction of the harness `bridge.json`
#                     manifest from a CI run artifact (Proposal 0001). Only the
#                     `deflate` decoder is needed; default features (which pull
#                     bzip2/zstd/aes C deps) are disabled to keep the build lean
#                     and shrink the attack surface on this hostile-input path.
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.31", features = ["bundled"] }
subtle = "2.5"
hmac = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = "9"

# Phase 3 — OTel emission + cost pipeline.
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
rust_decimal = { workspace = true }
# `uuid` is used for the OTel resource's `service.instance.id` attribute, and
# (Phase 3 follow-up) for the typed event channel's per-event correlation id.
uuid = { workspace = true }
# parking_lot mutexes used by the budget accumulator + subscriber registry —
# already a sinfonia dep, promoted to use here too.
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1.41", features = ["test-util", "macros", "rt-multi-thread"] }
# wiremock backs the integration tests in `tests/bridge_e2e.rs`. It stands
# in for the GitHub REST API (via `Octocrab::builder().base_uri(...)`) and
# the Linear GraphQL endpoint (via the `tracker.endpoint` config field), so
# the full webhook → feedback-loop → tracker-write flow is exercised over
# real HTTP.
wiremock = "0.6"
