[package]
name = "sinfonia-tracker"
description = "Shared issue-tracker abstraction (Linear + Jira adapters) used by `sinfonia` and `sinfonia-bridge`."
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
documentation.workspace = true

[lib]
name = "sinfonia_tracker"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
